--- a/index.html
+++ b/index.html
@@ -3,22 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet">
-    <title>Quiz Game</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Quiz Game super puper dlya Goshi power</title>
 </head>
 <body>
-    <div id="startBlock">
-        <h1>Quiz Game</h1>
-        <button id="start">Start game</button>
+    <div id="firstBlock">
+        <h1>Quiz game</h1>
+        <button id="start">START</button>
     </div>
-    <div id="questionBlock">
-        <p id="question">Question</p>
-        <div id="answer">
-            <button id="answerA">A</button>
-            <button id="answerB">B</button>
-            <button id="answerC">C</button>
-            <button id="answerD">D</button>
+    <div id="secondBlock">
+        <p id="question">question1</p>
+        <div>
+            <button class="answer"></button>
+            <button class="answer"></button>
+            <button class="answer"></button>
+            <button class="answer"></button>
         </div>
+    </div>
+    <div id="thirdBlock">
+        <h1>ВЫ ПРОШЛИ КВИЗ</h1>
+        <p id="score"></p>
+        <button id="back">Вернуться к главной</button>
     </div>
     <script src="script.js" type="module"></script>
 </body>
